--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -1,5 +1,8 @@
 <div>
-  <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
+  <h3 class="docs-section-heading">
+    <%= t("navigation.basics.title") %>
+  </h3>
+
   <ul>
     <li class="doc-item">
       <%= active_link_to(
@@ -8,83 +11,163 @@
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.upgrade-v4"), "#{locale_prefix}/basics/upgrade-v4/"%> </li>
-    <li class="doc-item">
-      <%= active_link_to t("navigation.basics.start_new_site"), "#{locale_prefix}/basics/start-new-site/" %>
+      <%= active_link_to(
+        t("navigation.basics.upgrade-v4"),
+        "#{locale_prefix}/basics/upgrade-v4/"
+      ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.directory_structure"), "#{locale_prefix}/basics/directory-structure/" %>
+      <%= active_link_to(
+        t("navigation.basics.start_new_site"),
+        "#{locale_prefix}/basics/start-new-site/"
+      ) %>
     </li>
-    <li class="doc-item" >
-      <%= active_link_to t("navigation.basics.development_cycle"), "#{locale_prefix}/basics/development-cycle/" %>
+    <li class="doc-item">
+      <%= active_link_to(
+        t("navigation.basics.directory_structure"),
+        "#{locale_prefix}/basics/directory-structure/"
+      ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.build_deploy"), "#{locale_prefix}/basics/build-and-deploy/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.development_cycle"),
+        "#{locale_prefix}/basics/development-cycle/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.frontmatter"), "#{locale_prefix}/basics/frontmatter/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.build_deploy"),
+        "#{locale_prefix}/basics/build-and-deploy/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.templates"), "#{locale_prefix}/basics/templating-language/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.frontmatter"),
+        "#{locale_prefix}/basics/frontmatter/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.helper_methods"), "#{locale_prefix}/basics/helper-methods/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.templates"),
+        "#{locale_prefix}/basics/templating-language/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.layouts"), "#{locale_prefix}/basics/layouts/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.helper_methods"),
+        "#{locale_prefix}/basics/helper-methods/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.partials"), "#{locale_prefix}/basics/partials/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.layouts"),
+        "#{locale_prefix}/basics/layouts/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.redirects"), "#{locale_prefix}/basics/redirects/"%> </li>
+      <%= active_link_to(
+        t("navigation.basics.partials"),
+        "#{locale_prefix}/basics/partials/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.blogging"), "#{locale_prefix}/basics/blogging/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.basics.redirects"),
+        "#{locale_prefix}/basics/redirects/"
+      ) %>
+    </li>
+    <li class="doc-item">
+      <%= active_link_to(
+        t("navigation.basics.blogging"),
+        "#{locale_prefix}/basics/blogging/"
+      ) %>
+    </li>
   </ul>
-  </div>
+</div>
 
-  <div class="toc-block">
-  <h3 class="docs-section-heading"><%= t("navigation.advanced.title") %></h3>
+<div class="toc-block">
+  <h3 class="docs-section-heading">
+    <%= t("navigation.advanced.title") %>
+  </h3>
+
   <ul>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.configuration"), "#{locale_prefix}/advanced/configuration/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.configuration"),
+        "#{locale_prefix}/advanced/configuration/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.project_templates"), "#{locale_prefix}/advanced/project-templates/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.project_templates"),
+        "#{locale_prefix}/advanced/project-templates/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.dynamic_pages"), "#{locale_prefix}/advanced/dynamic-pages/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.dynamic_pages"),
+        "#{locale_prefix}/advanced/dynamic-pages/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.data_files"), "#{locale_prefix}/advanced/data-files/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.data_files"),
+        "#{locale_prefix}/advanced/data-files/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.localization"), "#{locale_prefix}/advanced/localization/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.localization"),
+        "#{locale_prefix}/advanced/localization/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.asset_pipeline"), "#{locale_prefix}/advanced/asset-pipeline/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.asset_pipeline"),
+        "#{locale_prefix}/advanced/asset-pipeline/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.external_pipeline"), "#{locale_prefix}/advanced/external-pipeline/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.external_pipeline"),
+        "#{locale_prefix}/advanced/external-pipeline/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.rack_middleware"), "#{locale_prefix}/advanced/rack-middleware/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.rack_middleware"),
+        "#{locale_prefix}/advanced/rack-middleware/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.sitemap"), "#{locale_prefix}/advanced/sitemap/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.sitemap"),
+        "#{locale_prefix}/advanced/sitemap/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.pretty_urls"), "#{locale_prefix}/advanced/pretty-urls/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.pretty_urls"),
+        "#{locale_prefix}/advanced/pretty-urls/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.improving_cacheability"), "#{locale_prefix}/advanced/improving-cacheability/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.improving_cacheability"),
+        "#{locale_prefix}/advanced/improving-cacheability/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.file_size_optimization"), "#{locale_prefix}/advanced/file-size-optimization/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.file_size_optimization"),
+        "#{locale_prefix}/advanced/file-size-optimization/"
+      ) %>
+    </li>
     <li class="doc-item">
-      <%= active_link_to t("navigation.advanced.custom_extensions"), "#{locale_prefix}/advanced/custom-extensions/" %>
-      </li>
+      <%= active_link_to(
+        t("navigation.advanced.custom_extensions"),
+        "#{locale_prefix}/advanced/custom-extensions/"
+      ) %>
+    </li>
   </ul>
 </div>
