--- a/source/layouts/core.erb
+++ b/source/layouts/core.erb
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title><%= page_title %></title>
-    <%= stylesheet_link_tag "site" %>
+    <link href="<%= ENV["DEPLOY_PRIME_URL"] %>/stylesheets/site.css" rel="stylesheet">
   </head>
   <body>
     <div class="c-site-frame">
