--- a/source/layouts/core.erb
+++ b/source/layouts/core.erb
@@ -7,6 +7,7 @@
           content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title><%= page_title %></title>
     <%= stylesheet_link_tag "site" %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/docsearch.js/2.6.3/docsearch.min.css" />
   </head>
   <body>
     <div class="c-site-frame">
@@ -14,6 +15,8 @@
       <%= yield %>
       <%= partial "partials/site_footer" %>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/docsearch.js/2.6.3/docsearch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.2.0/anchor.min.js"></script>
     <%= javascript_include_tag "site" %>
   </body>
 </html>
