--- a/source/localizable/support/index.html.erb
+++ b/source/localizable/support/index.html.erb
@@ -1,18 +1,18 @@
 <div class="c-container">
-  <h1 class="support-main-title">
+  <h1>
     <%= t("support.title") %>
   </h1>
-  <h5 class="support-subtitle">
+  <p>
     <%= t("support.main_text") %>
-  </h5>
-  <h5 class="support-subtitle"><%= t("support.services") %></h5>
+  </p>
+  <p><%= t("support.services") %></p>
   <ul class="default-ul">
     <li><%= t("support.service_code_review") %></li>
     <li><%= t("support.service_extension_development") %></li>
     <li><%= t("support.service_architecture_planning") %></li>
     <li><%= t("support.service_else") %></li>
   </ul>
-  <h5 class="support-subtitle">
+  <p>
     <%= t("support.service_cta") %>
-  </h5>
+  </p>
 </div>
